--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,20 @@ img {
   display: block;
   max-width: 100%;
 }
+.timer{
+  display: flex;
+  margin-top: 30px;
+}
+
+.field{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-right: 10px;
+  font-size: 40px;
+  
+}
+.label{
+text-transform: uppercase;
+font-size: 14px;
+}
